# CMakeLists.txt — ClusterDynamics C++ solver (placeholder)
# Adapt from Fluor_Zr/ClusterDynamics/cpp_utils/CMakeLists.txt
# Requires SUNDIALS 7.1.1+ (CVODE integrator)

cmake_minimum_required(VERSION 3.16)
project(ClusterDynamicsSolver)

# TODO: set SUNDIALS_DIR to local installation
# find_package(SUNDIALS REQUIRED HINTS ${SUNDIALS_DIR})

message(FATAL_ERROR "ClusterDynamics CMakeLists.txt is a placeholder — configure SUNDIALS path and source files")
